--- a/_data/2020/nyu/people.yml
+++ b/_data/2020/nyu/people.yml
@@ -1,9 +1,36 @@
-- name: Carly Knight
-  image: /assets/images/carly.jpg
-  bio: Carly Knight is an Assistant Professor in the Sociology department at NYU. She recieved her PhD from Harvard University. Her work applies quantitative and computational methods to questions of historical and cultural change. Her primary research interest concerns the evolution of attitudes towards the market and the development of organizational market actors. She is also broadly interested in political sociology, law and regulation, markets and moral classification, and computational analysis. In the Fall, she will begin as an Assistant Professor at New York University. 
-  website: http://carlyrknight.org/
+organizers:
+  title: Organizers
+  people: 
+    - name: Carly Knight
+      image: /assets/images/carly.jpg
+      bio: Carly Knight is an Assistant Professor in the Sociology department at NYU. She recieved her PhD from Harvard University. Her work applies quantitative and computational methods to questions of historical and cultural change. Her primary research interest concerns the evolution of attitudes towards the market and the development of organizational market actors. She is also broadly interested in political sociology, law and regulation, markets and moral classification, and computational analysis. In the Fall, she will begin as an Assistant Professor at New York University. 
+      website: http://carlyrknight.org/
+
+    - name: Taylor Brown
+      image: /assets/images/taylor_brown.jpg
+      bio: Though based in NYC, Taylor Brown is a doctoral candidate in the Duke Sociology department, with association at the Duke Network Analysis Center. She has broad interests in computational methods and social media studies. Her dissertation explores gender inequality in creative professions. Taylor holds an MA in sociology from UNC-Chapel Hill and an MSc in evidence-based social intervention from the University of Oxford. Prior to beginning her PhD, Taylor fulfilled an appointment at the National Science Foundation in the division of Social and Economic Sciences.
+      website: http://www.taylorwhittenbrown.com/
+
+admin:
+  title: TA and Administrative Support
+  people:
+    - name: Di Zhou
+      image: /assets/images/ZhouDi.jpg
+      bio: Di Zhou is a doctoral student in the Sociology department at NYU. She is interested in political sociology and computational methods. She holds an MA in Social Sciences from UChicago. Her master thesis explored the formation of the pro-Trump discourse in a Chinese online forum during the 2016 general election using computational text analysis combined with in-depth interviews.
+      
+    - name: Tara Hoey
+      image:
+      bio: Department Manager at New York University.
+
+localspeakers:
+  title: Local Speakers
+  people:
   
-- name: Taylor Brown
-  image: /assets/images/taylor_brown.jpg
-  bio: Though based in NYC, Taylor Brown is a doctoral candidate in the Duke Sociology department, with association at the Duke Network Analysis Center. She has broad interests in computational methods and social media studies. Her dissertation explores gender inequality in creative professions. Taylor holds an MA in sociology from UNC-Chapel Hill and an MSc in evidence-based social intervention from the University of Oxford. Prior to beginning her PhD, Taylor fulfilled an appointment at the National Science Foundation in the division of Social and Economic Sciences.
-  website: http://www.taylorwhittenbrown.com/
+workshopleaders:
+  title: Workshop Leaders
+  people:
+
+participants:
+  title: Participants
+  people:
+ 
