--- a/_data/2020/nyu/schedule.yml
+++ b/_data/2020/nyu/schedule.yml
@@ -24,9 +24,9 @@
       time: "9:15 - 12:30"
     - name: "<b>Lunch</b>"
       time: "12:30 - 13:30"
-    - name: "Group Exercises"
+    - name: "<b>Group Exercises</b>"
       time: "13:30 - 15:45"
-    - name: "Break"
+    - name: "<b>Break</b>"
       time: "15:45 - 16:00"
     - name: "<b>Guest speaker</b> (TBD)"
       time: "16:00 - 17:30"
@@ -56,9 +56,9 @@
       time: "9:15 - 12:30"
     - name: "<b>Lunch</b>"
       time: "12:30 - 13:30"
-    - name: "Group Exercises"
+    - name: "<b>Group Exercises</b>"
       time: "13:30 - 15:45"
-    - name: "Break"
+    - name: "<b>Break</b>"
       time: "15:45 - 16:00"
     - name: "<b>Guest speaker</b> (TBD)"
       time: "16:00 - 17:30"
@@ -72,9 +72,9 @@
       time: "9:15 - 12:30"
     - name: "<b>Lunch</b>"
       time: "12:30 - 13:30"
-    - name: "Group Exercises"
+    - name: "<b>Group Exercises</b>"
       time: "13:30 - 15:45"
-    - name: "Break"
+    - name: "<b>Break</b>"
       time: "15:45 - 16:00"
     - name: "<b>Guest speaker</b> (TBD)"
       time: "16:00 - 17:30"
