--- a/_data/2020/nyu/people.yml
+++ b/_data/2020/nyu/people.yml
@@ -20,7 +20,7 @@ admin:
       
     - name: Tara Hoey
       image: /assets/images/HoeyTara.jpg
-      bio: Department Manager at New York University.
+      bio: Tara Hoey is NYU's Department Manager and is the Financial Administer for SICSS-NYU.
 
 localspeakers:
   title: Local Speakers
