--- a/_data/2020/hse/teaching_assistants.yml
+++ b/_data/2020/hse/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name: Coming soon...
+- name: Anastasia Karpova
+  bio: "Anastasia is currently pursuing her bachelor degree in economics from Higher school of economics (HSE). She was a teaching assistant for many statistical and data science courses at HSE. She is interested in computational methods in macroeconomics, marketing and social sciences."
+  image: /assets/images/Karpova.jpg
+  
