--- a/_data/2020/milano/schedule.yml
+++ b/_data/2020/milano/schedule.yml
@@ -1,1 +1,5 @@
-
+- date: 2020-06-15
+  name: "<b>Introduction and Ethics</b> (NYU Sociology Department)"
+  events:
+    - name: "<b>Intro to SICSS NYU</b> by Carly Knight and Taylor Brown"
+      time: "09:00 - 09:20"
