--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -1,29 +1,43 @@
 - date: 2020-06-15
-  name: Coming soon
+  name: "<b>Introduction and Ethics</b>"
+  events:
+    - name: "<b>Intro to SICSS Rutgers</b> by Katie McCabe"
+      time: "09:00 - 09:20"
+    - name: "<b>Livestream from Duke</b>, What is CSS and Research Ethics"
+      time: "09:30 - 12:30"
+    - name: "<b>Lunch</b>"
+      time: "12:30 - 14:30"
+    - name: "<b>Break</b>"
+      time: "14:30 - 14:45"
+    - name: "<b>Group exercises</b>"
+      time: "14:45 - 16:00"
+    - name: "<b>Introducing Machine Learning</b> (Andrey Tomashevskiy)"
+      time: "16:00 - 17:30"
+
 
 - date: 2020-06-16
-  name: Coming soon
+  name: "<b>Digital Trace Data</b>"
 
 - date: 2020-06-17
-  name: Coming soon
+  name: "<b>Text as Data</b>"
 
 - date: 2020-06-18
-  name: Coming soon
+  name: "<b>Surveys in the Digital Age</b>"
 
 - date: 2020-06-19
-  name: Coming soon
+  name: "<b>Network Analysis</b>"
 
 - date: 2020-06-22
-  name: Coming Soon
+  name: "<b>Experiments in the Digital Age</b>"
 
 - date: 2020-06-23
-  name: Start group projects
+  name: "<b>Start Group Projects</b>"
 
 - date: 2020-06-24
-  name: Work on group projects
+  name: "<b>Work on Group Projects</b>"
 
 - date: 2020-06-25
-  name: Work on group projects
+  name: "<b>Work on Group Projects</b>"
 
 - date: 2020-06-26
-  name: Present group projects
+  name: "<b>Present Group Projects</b>"
