--- a/_data/2020/tucson/teaching_assistants.yml
+++ b/_data/2020/tucson/teaching_assistants.yml
@@ -1,1 +1,4 @@
-- name:
+- name: Alejandro Beltran
+  image: /assets/images/AlejandroBeltran.jpg
+  bio: "Alejandro Beltran is a PhD candidate at the School of Government and Public Policy at the University of Arizona. His research broadly explores corruption and violence in Mexico. In his dissertation he identifies the institutional and political determinants of corruption investigations performed by subnational audit agencies. A separate research agenda explores the diversification of drug trafficking organizations into fentanyl and its consequences on violence. As a computational social scientist, he uses machine learning and natural language processing to generate quantitative measures of these phenomena and implements methods for causal inference in his empirical work."
+  website: https://sgpp.arizona.edu/people/alejandro-beltran
