--- a/_data/2020/howard-mathematica/schedule.yml
+++ b/_data/2020/howard-mathematica/schedule.yml
@@ -1,3 +1,9 @@
+- date: 2020-06-12
+  name: Coming soon
+  
+- date: 2020-06-13
+  name: Coming soon
+  
 - date: 2020-06-14
   events:
     - name: "6:00pm Opening Dinner (*Not open to public/No livestream*)"
