--- a/_data/2020/copenhagen/speakers.yml
+++ b/_data/2020/copenhagen/speakers.yml
@@ -1,6 +1,6 @@
 - name: Samin Aref
   image: /assets/images/saref.jpg
-  bio: "Samin Aref is a research scientist at the [Max Planck Institute for Demographic Research (MPIDR)](https://www.demogr.mpg.de/en/default.htm) working on a wide range of computational social science topics. My background is in Network Science and Operations Research and he has an Erdős number of [3](http://www.ams.org/mathscinet/collaborationDistance.html?group_source=1284823)."
+  bio: "Samin Aref is a research scientist at the Max Planck Institute for Demographic Research (MPIDR) working on a wide range of computational social science topics. My background is in Network Science and Operations Research and he has an Erdős number of 3."
   website: https://saref.github.io/
   
 - name: Claus Thorn Ekstrøm
