updated rochelle terman image name

--- a/_data/2020/chicago/speakers.yml
+++ b/_data/2020/chicago/speakers.yml
@@ -7,5 +7,5 @@
   image: /assets/images/jamesEvans.jpg
   bio: "James Evans is a Professor at the University of Chicago and External Professor at the Santa Fe Institute. Professor Evans is the Director of the Knowledge Lab and the founder and director of the Computational Social Science program at the University of Chicago."
 - name: Rochelle Terman
-  image: /assets/images/Terman.jpg  
+  image: /assets/images/Terman.jpeg  
   bio: "Rochelle Terman is the Provost's Postdoctoral Fellow in the Department of Political Science at the University of Chicago, where she will begin as Assistant Professor in Fall 2020. She studies international norms, gender, and advocacy, with a focus on the Muslim world."
