Fix typo in TAs

--- a/_data/2020/copenhagen/teaching_assistants.yml
+++ b/_data/2020/copenhagen/teaching_assistants.yml
@@ -3,6 +3,6 @@
   image: /assets/images/asandersen.jpg
 
 - name: Jolien Cremers
-  bio: "Jolien Cremers is a Postdoc at the Department of Public Health at the University of Copenhagen. She is anpplied statistician bridging the gap between mathematical statistics and applied researchers by bringing new methods to their (potential) users. Her current research interest lies in modeling life trajectories from registry data using various methods for longitudinal and event-history data."
+  bio: "Jolien Cremers is a Postdoc at the Department of Public Health at the University of Copenhagen. She is an applied statistician bridging the gap between mathematical statistics and applied researchers by bringing new methods to their (potential) users. Her current research interest lies in modeling life trajectories from registry data using various methods for longitudinal and event-history data."
   image: /assets/images/jcremers.jpg
   website: https://publichealth.ku.dk/staff/?pure=en/persons/620191
