--- a/_data/2020/konstanz/speakers.yml
+++ b/_data/2020/konstanz/speakers.yml
@@ -1,1 +1,5 @@
-- name:
+- name: Julian Schuessler
+  image: 
+  bio: "Julian Schuessler is a doctoral student at the Graduate School of Decision Sciences at the University of Konstanz, where he is also affiliated with the Center for Data and Methods. He researches public opinion on European integration as well as methods for causal inference. He is co-recipient of the 2019 Causality in Statistics Education Award of the American Statistical Association."
+  website: https://www.julianschuessler.net/
+  
