Fix typo in schedule

--- a/_data/2020/copenhagen/schedule.yml
+++ b/_data/2020/copenhagen/schedule.yml
@@ -30,7 +30,7 @@
   events:
     - name: "Causal Discovery: Kun Zhang"
     - name: "Natural Experiments: David Dreyer Lassen"
-    - name: "Mendelian randomizatin/GWAS: Claus Thorn Ekstrøm"
+    - name: "Mendelian randomization/GWAS: Claus Thorn Ekstrøm"
 
 - date: 2020-06-20
   name: "Day off"
