--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -104,7 +104,7 @@
   events:
     - name: "<b>Work on Group Projects</b>"
       time: "09:00 - 11:45"
-    - name: "<b>Lunch and Guest Speaker</b>"
+    - name: "<b>Lunch and Guest Speaker</b> (Arvind Narayanan)"
       time: "12:00 - 13:30"
     - name: "<b>Work on Group Projects</b>"
       time: "13:30 - 17:00"
