--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -22,7 +22,7 @@
       time: "09:00 - 09:20"
     - name: "<b>Lessons on Digital Trace Data</b>"
       time: "09:30 - 10:30"
-    - name: "<b>Special Session, TBD</b>"
+    - name: "<b>Special Session on AI</b>"
       time: "10:30 - 15:30"
     - name: "<b>Applying Digital Trace Data</b> (Michael Kenwick)"
       time: "15:30 - 17:30"
