--- a/_data/2020/konstanz/speakers.yml
+++ b/_data/2020/konstanz/speakers.yml
@@ -11,7 +11,7 @@
 - name: Philipp Kling
   image: /2020/konstanz/images/philipp_kling.jpg
   bio: "Philipp Kling is a PhD Student of Computational Social Science in the Graduate School of Decision Sciences of the University of Konstanz. He received both his BA (Major in Sociology, Minor in Statistics) and his MSc (Social and Economic Data Analysis) from the University of Konstanz. In his dissertation, he analyzes social media users' consumption awareness. In particular, he focuses on the accuracy of Twitter users' statements about their online activity and the political heterogeneity of their Twitter network. Further, he analyzes the normative perceptions of biased news diets by utilizing online surveys and experiments in addition to analyses of social media data."
-  website: https://www.polver.uni-konstanz.de/cdm/people/students/kling/
+  website: https://philippkling.com/
 
 - name: Julian Schuessler
   image: /2020/konstanz/images/JulianSchuessler.jpg
