--- a/_data/2020/beijing/location.yml
+++ b/_data/2020/beijing/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/beijing.jpg
-title: Beijing
+title: Beijing [POSTPONED]
 subtitle: Beijing, China
 description: "From June 14 to June 27, 2020, Tsinghua University will host a partner event for the Summer Institute in Computational Social Science."
 link: beijing
