--- a/_data/2020/stellenbosch/location.yml
+++ b/_data/2020/stellenbosch/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/stellenbosch.jpg
-title: Stellenbosch
+title: Stellenbosch [POSTPONED]
 subtitle: Stellenbosch, South Africa
 description: "From 15 to 26 June 2020, the Department of Information Science at Stellenbosch University will host a partner event for the Summer Institute in Computational Social Science."
 link: stellenbosch
