--- a/_data/2020/milano/hero.yml
+++ b/_data/2020/milano/hero.yml
@@ -1,3 +1,3 @@
 header_2: "June 29 to July 11, 2020 | Bocconi University | Milan, Italy"
 header_3: "Sponsored by Bocconi University"
-location: "SICSS-Milano [POSTPONED]"
+location: "SICSS-Milano"
