--- a/_data/2020/copenhagen/speakers.yml
+++ b/_data/2020/copenhagen/speakers.yml
@@ -1,6 +1,6 @@
 - name: Samin Aref
   image: /assets/images/saref.jpg
-  bio: "Samin Aref is a research scientist at the Max Planck Institute for Demographic Research (MPIDR) working on a wide range of computational social science topics. My background is in Network Science and Operations Research and he has an Erdős number of 3."
+  bio: "Samin Aref is a research scientist at the Max Planck Institute for Demographic Research (MPIDR) working on a wide range of computational social science topics. His background is in Network Science and Operations Research and he has an Erdős number of 3."
   website: https://saref.github.io/
   
 - name: Claus Thorn Ekstrøm
