--- a/_data/2020/konstanz/location.yml
+++ b/_data/2020/konstanz/location.yml
@@ -1,5 +1,5 @@
 image: /assets/images/konstanz.jpg
-title: Konstanz
+title: Konstanz [POSTPONED]
 subtitle: Konstanz, Germany
 description: "From the evening of July 19 to July 31, 2020, the University of Konstanz will host a partner event for the Summer Institute in Computational Social Science."
 link: konstanz
