--- a/_data/2020/nyu/hero.yml
+++ b/_data/2020/nyu/hero.yml
@@ -1,3 +1,3 @@
 header_2: "June 15 to June 20, 2020 | New York University | New York, New York"
 header_3: "Sponsored by New York University"
-location: "SICSS-NYU"
+location: "SICSS-NYU [POSTPONED]"
