--- a/_data/2017/princeton/sidebar.yml
+++ b/_data/2017/princeton/sidebar.yml
@@ -4,5 +4,5 @@
   url: "people"
 - name: Schedule & Materials
   url: "schedule"
-- name: Participant-driven research projects
+- name: Projects
   url: "projects"
