--- a/_data/2020/duke/location.yml
+++ b/_data/2020/duke/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/duke.jpg
 title: Duke University
-subtitle: Durham, North Carolina
-description: "From the evening of Sunday, June 14 to the morning of Saturday, June 27, 2020, Duke University will host a partner event for the Summer Institute in Computational Social Science."
+subtitle: Virtual event
+description: "June 14 to June 26, 2020. SICSS-Duke has been changed from an in-person event to a virtual event."
 link: duke
 year: 2020
