make duke 2020 virtual

--- a/_data/2020/duke/location.yml
+++ b/_data/2020/duke/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/duke.jpg
 title: Duke University
 subtitle: Virtual event
-description: "June 14 to June 26, 2020. SICSS-Duke has been changed from an in-person event to a virtual event."
+description: "June 14 to June 26, 2020"
 link: duke
 year: 2020
