removing information for postponed sites

--- a/_data/2020/copenhagen/location.yml
+++ b/_data/2020/copenhagen/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/copenhagen.jpg
 title: Copenhagen [POSTPONED]
 subtitle: Copenhagen, Denmark
-description: "From the evening of June 14 to June 26, 2020, the Faculty of Social Sciences and the Faculty of Health and Medical Sciences at the University of Copenhagen will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: copenhagen
 year: 2020
