--- a/_data/2020/milano/location.yml
+++ b/_data/2020/milano/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/milan.jpg
 title: Milano [POSTPONED]
 subtitle: Milan, Italy
-description: "From the evening of June 28 to July 11 2020, Bocconi University will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: milano
 year: 2020
