--- a/_data/2020/princeton/location.yml
+++ b/_data/2020/princeton/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/princeton-2.jpg
 title: Princeton-CITP [POSTPONED]
 subtitle: Princeton, New Jersey
-description: "From the evening of June 14 to 19, 2020, the Princeton University Center for Information Technology Policy will host a partner site for the Summer Institute in Computational Social Science. "
+description: ""
 link: princeton
 year: 2020
