--- a/_data/2020/chicago/location.yml
+++ b/_data/2020/chicago/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/chicago.jpg
 title: Chicago
 subtitle: Chicago, Illinois
-description: "From the evening of June 14 to June 27 2020, Northwestern University will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: chicago
 year: 2020
