--- a/_data/2020/helsinki/location.yml
+++ b/_data/2020/helsinki/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/helsinki.jpg
 title: Helsinki [POSTPONED]
 subtitle: Helsinki, Finland
-description: "During 2020, the University of Helsinki will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: helsinki
 year: 2020
