--- a/_data/2020/nyu/location.yml
+++ b/_data/2020/nyu/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/nyu.jpg
 title: NYU [POSTPONED]
 subtitle: New York, New York
-description: "New York University will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: nyu
 year: 2020
