--- a/_data/2020/paris/location.yml
+++ b/_data/2020/paris/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/paris.jpg
 title: Paris [POSTPONED]
 subtitle: Plateau de Saclay, France
-description: "From the evening of June 23rd to July 2nd 2020, ENSAE will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: paris
 year: 2020
