--- a/_data/2020/tokyo/location.yml
+++ b/_data/2020/tokyo/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/tokyo2.jpg
 title: Tokyo [POSTPONED]
 subtitle: Yokohama, Japan
-description: "From July 13 to July 22 2020, Keio University will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: tokyo
 year: 2020
