add pre-arrival Duke 2020

--- a/_data/2020/duke/sidebar.yml
+++ b/_data/2020/duke/sidebar.yml
@@ -1,5 +1,7 @@
 - name: "Apply"
   url: "apply"
+- name: "Pre-arrival"
+  url: "pre-arrival"
 - name: People
   url: "people"
 - name: Schedule & Materials
