--- a/_data/2020/bay_area/location.yml
+++ b/_data/2020/bay_area/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/bay.jpg
 title: Bay Area
-subtitle: Berkeley, California
-description: "From the evening of June 15 to June 26 2020, the University of California, Berkeley will host a partner event for the Summer Institute in Computational Social Science."
+subtitle: Virtual event
+description: "June 15 to June 26 2020"
 link: bay_area
 year: 2020
