--- a/_data/2020/maastricht/location.yml
+++ b/_data/2020/maastricht/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/maastricht.jpg
 title: Maastricht
-subtitle: Maastricht, Netherlands
-description: "From the evening of June 14 to June 26 2020, Maastricht University will host a partner event for the Summer Institute in Computational Social Science."
+subtitle: Virtual event
+description: "June 14 to June 26 2020"
 link: maastricht
 year: 2020
