--- a/_data/2020/bay_area/location.yml
+++ b/_data/2020/bay_area/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/bay.jpg
 title: Bay Area
 subtitle: Virtual event
-description: "June 15 to June 26 2020"
+description: "June 15 to June 26, 2020"
 link: bay_area
 year: 2020
