Switch to virtual and clean up

--- a/_data/promo.yml
+++ b/_data/promo.yml
@@ -1,6 +1,6 @@
 - title: Find a Location
-  subtitle: "31 Locations Across the Globe"
-  body: "SICSS has been held in 31 locations around the world in order to increase access to the field of computational social science."
+  subtitle: "Locations Around the World"
+  body: "SICSS has been held in locations around the world in order to increase access to the field of computational social science."
   image: /assets/images/duke.jpg
   cta: "Find a Location"
   link: "locations"
