--- a/_data/program_overview.yml
+++ b/_data/program_overview.yml
@@ -1,5 +1,5 @@
 - title: Learning
-  body: "The instructional program includes lectures, group problem sets, and participant-led research projects. Outside speakers who conduct computational social science research in a variety of settings, such as academia, industry, and government."
+  body: "The instructional program includes lectures, group problem sets, and participant-led research projects, and outside speakers who conduct computational social science research in a variety of settings, such as academia, industry, and government."
   image: /assets/images/lecture.svg
   cta: "Find a Location"
   link: "tbd"
@@ -11,7 +11,7 @@
   link: "tbd"
 
 - title: Open Source
-  body: "Because we are committed to open and reproducible research, all materials created by faculty and students for the Summer Institute are open source, and archived on this site for others to learn from or use in their own courses."
+  body: "In order to increase educational opportunties, all materials created by faculty for the Summer Institutes are open source and archived on this site for others to learn from or use in their own courses."
   image: /assets/images/open-source.svg
   cta: "Learn More"
   link: "tbd"
