--- a/_data/program_overview.yml
+++ b/_data/program_overview.yml
@@ -5,7 +5,7 @@
   link: "tbd"
 
 - title: Topics
-  body: "Our programs cover automated text analysis, website scraping, digital field experiments, non-probability sampling, mass collaboration, ethics, and many other issues. These subjects are taught by a group of core faculty as well as visiting speakers from the cutting edge of the field."
+  body: "Our programs cover automated text analysis, website scraping, digital field experiments, non-probability sampling, mass collaboration, ethics, and many other issues. These subjects are taught by a group of core faculty as well as visiting speakers."
   image: /assets/images/data.svg
   cta: "Find Resources"
   link: "tbd"
