--- a/_data/2020/oxford/schedule.yml
+++ b/_data/2020/oxford/schedule.yml
@@ -1,17 +1,2 @@
-- date: 2020-07-5
-  name: Participants arrive
-  events:
-    - name: "<b>Informal opening dinner</b> (Junior Common Room, Nuffield College)"
-      time: "18:30 - 21:30"
-      
-- date: 2020-07-6
-  name: Start of the Oxford SICSS!
-  events:
-    - name: Schedule to be confirmed...
-      time: "09:00 - 18:00"
-      
-- date: 2020-07-17
-  name: End of the Oxford SICSS!
-  events:
-    - name: "<b>Informal leaving lunch</b> (venue to be confirmed)"
-      time: "12:30 - 13:30" 
+- date: 2020-04
+  name: We are reluctantly rescheduling SICSS-Oxford for 2021.
