--- a/_data/2020/oxford/hero.yml
+++ b/_data/2020/oxford/hero.yml
@@ -1,3 +1,3 @@
-header_2: "July 5 to July 17, 2020 | University of Oxford | Oxford"
+header_2: "University of Oxford | Oxford"
 header_3: "Sponsored by Oxford University"
 location: "SICSS-Oxford"
