--- a/_data/2020/oxford/location.yml
+++ b/_data/2020/oxford/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/oxford.jpg
 title: Oxford
 subtitle: Oxford, England
-description: "From the evening of July 5 to July 16 2020, Oxford University will host a partner event for the Summer Institute in Computational Social Science."
+description: "Oxford University will host a partner event for the Summer Institute in Computational Social Science."
 link: oxford
-year: 2020
+year: 2021
