--- a/_data/2020/stellenbosch/location.yml
+++ b/_data/2020/stellenbosch/location.yml
@@ -4,3 +4,4 @@ subtitle: Stellenbosch, South Africa
 description: "From 15 to 26 June 2020, the Department of Information Science at Stellenbosch University will host a partner event for the Summer Institute in Computational Social Science."
 link: stellenbosch
 year: 2020
+order: 99
