--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -1,43 +1,41 @@
 - date: 2020-06-14
   events:
-    - name: "6:00pm Opening Dinner (*Zoom*)"
+    - name: "6:00pm Opening Meet and Greet"
 
 - date: 2020-06-15
-  name: Coming soon
+  events:
+    - name: "9:00am-12pm Small Group Discussions with Matt Salganik and Chris Bail (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-16
-  name: Coming soon
+    - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"	
 
 - date: 2020-06-17
-  name: Coming soon
+    - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-18
-  name: Coming soon
+    - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-19
-  name: Coming soon
+    - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-20
-  name: Coming soon
+    - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-21
   name: Day off
 
 - date: 2020-06-22
-  name: Work on group projects
+  name: Work on group projects or join SICSS Festival Events (time TBD)
 
 - date: 2020-06-23
-  name: Work on group projects
+  name: Work on group projects or join SICSS Festival Events (time TBD)
 
 - date: 2020-06-24
-  name: Work on group projects
+  name: Work on group projects or join SICSS Festival Events (time TBD)
 
 - date: 2020-06-25
-  name: Work on group projects
+  name: Work on group projects or join SICSS Festival Events (time TBD)
 
 - date: 2020-06-26
-  name: Present group projects
+  name: 12pm-5pm Final Research Proposal Presentations
 
-- date: 2020-06-27
-  events:
-    - name: "Participants depart"
