--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -7,24 +7,30 @@
     - name: "9:00am-12pm Small Group Discussions with Matt Salganik and Chris Bail (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-16
+  events:
     - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"	
 
 - date: 2020-06-17
+  events:
     - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-18
+  events:
     - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-19
+  events:
     - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-20
+  events:
     - name: "9:00am-12pm Small Group Discussions with Matt Salganik (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-21
   name: Day off
 
 - date: 2020-06-22
+
   name: Work on group projects or join SICSS Festival Events (time TBD)
 
 - date: 2020-06-23
