--- a/_data/2020/istanbul/location.yml
+++ b/_data/2020/istanbul/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/istanbul.jpg
 title: Istanbul
-subtitle: Istanbul, Turkey
-description: "From the evening of June 14 to June 27 2020, Kadir Has University will host a partner event for the Summer Institute in Computational Social Science."
+subtitle: Virtual event
+description: "June 14 to June 27, 2020"
 link: istanbul
 year: 2020
