--- a/_data/2020/oxford/location.yml
+++ b/_data/2020/oxford/location.yml
@@ -1,6 +1,7 @@
 image: /assets/images/oxford.jpg
-title: Oxford
+title: Oxford [POSTPONED]
 subtitle: Oxford, England
-description: "Oxford University will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: oxford
-year: 2021
+year: 2020
+order: 99
