--- a/_data/2020/chicago/location.yml
+++ b/_data/2020/chicago/location.yml
@@ -1,6 +1,7 @@
 image: /assets/images/chicago.jpg
-title: Chicago
+title: Chicago [POSTPONED]
 subtitle: Chicago, Illinois
 description: ""
 link: chicago
 year: 2020
+order: 99
