tweak meet and greet

--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -1,6 +1,6 @@
 - date: 2020-06-14
   events:
-    - name: "6:00pm Opening Meet and Greet"
+    - name: "5:00pm Opening Meet and Greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2020-06-15
   events:
@@ -8,7 +8,7 @@
 
 - date: 2020-06-16
   events:
-    - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"	
+    - name: "9:00am-12pm Small Group Discussions with Chris Bail (check back here to find your group's assigned half-hour time block"
 
 - date: 2020-06-17
   events:
@@ -44,4 +44,3 @@
 
 - date: 2020-06-26
   name: 12pm-5pm Final Research Proposal Presentations
-
