--- a/_data/2020/hse/location.yml
+++ b/_data/2020/hse/location.yml
@@ -1,7 +1,7 @@
 image: /assets/images/moscow.jpg
 title: HSE University [POSTPONED]
 subtitle: Moscow, Russia
-description: "From the evening of June 14 to June 20 2020, the Higher School of Economics will host a partner event for the Summer Institute in Computational Social Science."
+description: ""
 link: hse
 year: 2020
 order: 99
