--- a/_data/2020/montreal/location.yml
+++ b/_data/2020/montreal/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/Montreal_photo.jpg           
 title: Montreal
 subtitle: Montreal, Canada
-description: "From the evening of June 14 to June 27 2020, Université du Québec à Montréal (UQAM) will host a partner event for the Summer Institute in Computational Social Science."
+description: "June 14 to June 27, 2020"
 link: montreal
 year: 2020
