--- a/_data/2020/tucson/location.yml
+++ b/_data/2020/tucson/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/tucson2.jpg
 title: Tucson
 subtitle: Tucson, Arizona
-description: "From January 3 to January 9 of 2021, the University of Arizona will host a partner event for the Summer Institute in Computational Social Science."
+description: "January 3 to January 9, 2021"
 link: tucson
 year: 2020
